<resources>
    <string name="app_name">Eventify</string>
    <string name="eventify">Eventify</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="default_web_client_id">116821613216-l7j7sbgp8048g5fp5vccj7o0gsnd4iqr.apps.googleusercontent.com</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_event">Create Event</string>
    <string name="view_event">View Event</string>
    <string name="view_invitations">View Invitations</string>
    <string name="contact">Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_message">Edit your text message</string>
    <string name="event_name">Event Name</string>
    <string name="message">Enter your message</string>
    <string name="event_description">Event Description</string>
    <string name="event_theme">Event Theme</string>
    <string name="event_location">Event Location</string>
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string name="photo">Photo</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    event_location
</resources>